--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@splinetool/react-spline": "^2.2.1",
     "@splinetool/runtime": "^1.4.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0-beta.0",
